--- a/_pages/resume.html
+++ b/_pages/resume.html
@@ -4,8 +4,8 @@ permalink: /resume/
 ---
 
 {% include resume/career-profile.html %}
-{% include resume/experience.html %}
-{% include resume/projects.html %}
 {% include resume/skills.html %}
+{% include resume/work-history.html %}
+{% include resume/projects.html %}
 
 <i class="last-updated">Last update: {{ site.resume.last_update }}</i>
